--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -1,33 +1,16 @@
+@use "../utils/mixins";
+@use "../utils/vars" as *;
+
+@include mixins.responsive-font-size(
+  (
+    "small": 360,
+    "medium": 1200,
+    "large": 1920,
+  )
+);
+
 html {
   scroll-behavior: smooth;
-}
-
-@font-face {
-  font-family: "ZT Neue Ralewe";
-  src: local("ZTNeueRalewe-Italic"),
-    url("../fonts/ZTNeueRalewe-Italic.woff2") format("woff2"),
-    url("../fonts/ZTNeueRalewe-Italic.woff") format("woff");
-  font-weight: 400;
-  font-style: Italic;
-  font-display: swap;
-}
-@font-face {
-  font-family: "ZT Neue Ralewe";
-  src: local("ZTNeueRalewe-MediumItalic"),
-    url("../fonts/ZTNeueRalewe-MediumItalic.woff2") format("woff2"),
-    url("../fonts/ZTNeueRalewe-MediumItalic.woff") format("woff");
-  font-weight: 500;
-  font-style: normal;
-  font-display: swap;
-}
-@font-face {
-  font-family: "ZT Neue Ralewe";
-  src: local("ZTNeueRalewe-Regular"),
-    url("../fonts/ZTNeueRalewe-Regular.woff2") format("woff2"),
-    url("../fonts/ZTNeueRalewe-Regular.woff") format("woff");
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
 }
 
 body {
@@ -237,23 +220,5 @@ img {
   .btn {
     font-size: 16rem;
     padding: 14rem 30rem;
-  }
-}
-
-@media (min-width: 1200px) {
-  html {
-    font-size: unquote("calc(100vw / 1920)");
-  }
-}
-
-@media (max-width: 767px) {
-  html {
-    font-size: unquote("calc(100vw / 360)");
-  }
-}
-
-@media (min-width: 768px) and (max-width: 1200px) {
-  html {
-    font-size: unquote("calc(100vw / 1200)");
   }
 }
